--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
     box-sizing: border-box;
    font-family: 'Poppins';
 }
+html{
+    scroll-behavior: smooth;
+}
 /* !HEADER */
 .header{
     width: 100%;
@@ -98,10 +101,23 @@ margin: 1em 0;
     text-decoration: none;
     border-radius: 20px;
     transition: 0.5s;
+    color: #000;
 }
 .botones .btn:hover{
     color: #fff;
     background-color: #000;
+}
+.botones .btn-contact{
+    background: #000;
+    color: #fff;
+    padding: 10px;
+    text-decoration: none;
+    border-radius: 20px;
+    transition: .5s linear;
+}.botones .btn-contact:hover{
+    background: #fff;
+    color: #000;
+   border: 1px solid;
 }
 /* .img-svg{
 
@@ -257,3 +273,80 @@ margin: 1em 0;
 
 
 /* FIN SECTION PROYECTOS */
+
+/* INICIO FOOTER */
+.footer{
+    width: 100%;
+    height: 70vh;
+}
+.contact-container {
+    width: 90%;
+    height: inherit;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}.enlaces{
+    width: 60%;
+    height: 100px;
+    border: 1px solid;
+    margin-top: 2rem;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+   
+} .contact-titulo{
+    font-weight: 800;
+    font-size: 2.6em;
+    text-align: center;
+    margin-bottom: 1rem;
+   
+}
+.enlaces img{
+    width: 30px;
+    height: 30px;
+}
+.enlaces .email{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}.enlaces .linkedin{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+}
+.enlaces a{
+    text-decoration: none;
+    color: #000;
+    transition: .4s;
+}.enlaces a:hover{
+    color: red;
+    border-bottom: 1px solid bisque;
+}
+
+/* nav footer */
+
+.nav-footer{
+    width: 100%;
+    height: 6rem;
+    margin-top: 2rem;
+    background: bisque;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}.link-footer{
+    color: #000;
+    text-decoration: none;
+    font-size: 1.3em;
+    transition: 0.4s;
+}.link-footer:hover{
+    border-bottom: 1px solid #fff;
+   color: rgb(246, 174, 111);
+}.copyright{
+    margin-top: 2rem;
+}
+    /* FIN FOOTER */
