--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ html{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-weight: bold;
 }
 .header .navbar{
     width: 50%;
@@ -277,11 +278,11 @@ margin: 1em 0;
 /* INICIO FOOTER */
 .footer{
     width: 100%;
-    height: 70vh;
+    height: 55vh;
 }
 .contact-container {
     width: 90%;
-    height: inherit;
+    height: 400px;
     margin: auto;
     display: flex;
     flex-direction: column;
