--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-   font-family: 'Poppins';
+   font-family: 'Poppins' , 'monospace';
 }
 html{
     scroll-behavior: smooth;
@@ -16,6 +16,15 @@ html{
     display: flex;
     justify-content: space-between;
     align-items:  center;
+    transition-duration: 0.3s;
+}
+.sticky{
+    position: sticky;
+    top: 0;
+    height: 4.5rem;
+    background: linear-gradient(0deg , 
+    rgb(255, 210, 171 , 0.5),
+    rgb(255, 210, 171 , 0.5));
 }
 .header .logo{
     margin-left: 2em;
@@ -39,11 +48,11 @@ html{
     text-decoration: none;
     color: #000;
     font-size: 1.3em;
-    transition: 0.4s;
+    transition: 0.1s;
 }
 .navbar .link:hover{
-   border-bottom: 1px solid #fff;
-   color: rgb(246, 174, 111);
+    border-bottom: 1px solid #fff;
+    color: rgb(246, 174, 111);
 } 
 /* ! MAIN */
 #main{
@@ -57,6 +66,7 @@ html{
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 /* .box-img{
    
@@ -160,23 +170,24 @@ margin: 1em 0;
     font-weight: 800;
     font-size: 2.5em;
 }
-.img-cono{
+.imagen__sobremi{
     height: 400px;
     width: 320px;
     border-radius: 40px;
-    /* box-shadow: 10px 10px 5px grey; */
     object-fit: cover;
 }
-.experiencia{
+
+
+.experiencia__container{
     width: 700px;
     height: 500px;
     display: flex;
     flex-direction: column;
 }
-.box-exp{
+.experiencia{
     display: flex;
 }
-.cajita{
+.box__card{
     border: 1px solid rgba(128, 128, 128, 0.854);
     width: 230px;
     height: 180px;
@@ -190,20 +201,21 @@ margin: 1em 0;
     justify-content: center;
     align-items: center;
     gap: 20px;
-}.cajita p{
+}.box__card p{
     color: rgba(71, 71, 71, 0.814);
     font-weight: 400;
 }
-.sm-parragrahp{
+.experiencia__parrafo{
     text-align: center;
     width: 78%;
     height: 100px;
     margin: 50px auto;
 }
-.sm-parragrahp p{
+.experiencia__parrafo p{
     text-align: start;
     color: rgba(71, 71, 71, 0.814);
     font-weight: 400;
+    line-height: 27px;
 
 }
 /* SECTION HABILIDADES */
@@ -211,34 +223,60 @@ margin: 1em 0;
     width: 100%;
     height: 100vh;
 }
-.skills{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+
 .skills-titulo{
     font-weight: 800;
     font-size: 2.6em;
     text-align: center;
 }
-.img-skills img{
-    height: 200px;
-    width: 200px;
-    transition: 0.4s linear;
-}.img-skills img:hover{
- 
- transform: scale(1.1);
+.card__box{
+    width: 100%;
+    height: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items:center;
+    cursor: pointer;
+    user-select: none;
 }
-.img-skills{
-    width: 90%;
-    height: 50vh;
-   margin: 50px auto;
-   display: flex;
-   justify-content: space-evenly;
-   align-items: center;
+.card__container{
+    width: 200px;
+    height: 250px;
+    text-align: center;
+}
+.card__imagen{
+    margin: 0 auto;
+    width: 120px;
+    height: 120px;
+    border-radius: 100%;
+    background-color: rgba(255, 145, 66, 0.826);
+    position: relative;
+}
+.card__container:hover img{
+   transition-duration: 0.5s;
+    transform: rotateZ(-360deg);
+} 
+.card__css{
+    background-color: rgba(40, 114, 193, 0.853);
+}
+.card__javascript{
+    background-color: rgb(133, 133, 7);
+}
+.card__react{
+    background-color: rgba(3, 40, 79, 0.968);
+}
+.card__imagen img{
+    position: relative;
+    top: 10%;
+    right: 0%;
+}
+
+.card__texto{
+    margin-top: 5px ;
+}
+.card__texto p{
+    text-align: center;
+    color: rgba(71, 71, 71, 0.814);
 }
 
 /* FIN SECTION HABILIDADES */
@@ -277,7 +315,7 @@ margin: 1em 0;
 /* INICIO FOOTER */
 .footer{
     width: 100%;
-    height: 70vh;
+    height:55vh;
 }
 .contact-container {
     width: 90%;
@@ -347,6 +385,8 @@ margin: 1em 0;
     border-bottom: 1px solid #fff;
    color: rgb(246, 174, 111);
 }.copyright{
-    margin-top: 2rem;
+    margin-top: 5rem;
 }
     /* FIN FOOTER */
+
+  
