--- a/css/style.css
+++ b/css/style.css
@@ -217,8 +217,9 @@ margin: 1em 0;
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
+   
 }
 .skills-titulo{
     font-weight: 800;
@@ -241,7 +242,22 @@ margin: 1em 0;
    justify-content: space-evenly;
    align-items: center;
 }
-
+.drop__container{
+    width: 100%;
+    height: 50vh;
+    background-color: aquamarine;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+}.drag__box{
+    width: 90%;
+    height: 100vh;
+    background-color: #000;
+}
+.arrastrando{
+    opacity: 0.5;
+}
 /* FIN SECTION HABILIDADES */
 /* SECTION PROYECTOS */
 .project{
