--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,10 +1,205 @@
 
-@media (max-width: 480px){
+            
+            @media screen and (max-width:782px){
+    .header{
+      height: 7.5rem;
+      justify-content: space-around;
+    }         
+    .header .logo{
+      font-size: 1.4rem;
+      margin-left: 0px;
+    }
+    .header .navbar{
+      width: 65%;
+      display: flex;
+    }
+    .navbar .link{
+      font-size: 1.2rem;
+    }
+  #img-port{
+      height: 300px;
+      width: 300px;
+   }
+  .container{
+   width: 330px;
+  }
+  .container .textos p{
+   font-size: 1.2rem;
+  }
+  .img-svg a img{
+    width: 40px;
+    height: 40px;
+  }
+  .sm-texto{
+   gap: 0;
+  }
+  .sm-texto p{
+   font-size: 1.2rem;
+  }
+  .container-sobremi{
+   flex-direction: column-reverse;
+  }
+.imagen__sobremi{
+   width: 280px;
+   height: 300px;
+}
+.box__card h3{
+   font-size: 1.6rem;
+}
+.box__card p{
+   font-size: 1.1rem;
+}
+.experiencia__parrafo p{
+   font-size:1.2rem;
+}
+.skills-titulo{
+   margin-top: 2rem;
+}
+.card__box{
+   flex-wrap: wrap;
+}
+.card__container{
+   width: 250px;
+}
+.enlaces{
+   width: 80%;
+}
+.enlaces  a{
+   font-size: 1.2rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ }
+ 
+             
+ @media screen and (max-width:645px){
+   body{
+      position: absolute;
+   }
+    .header .navbar{
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 100vh;
+      background: linear-gradient(0deg , 
+      rgba(255, 255, 255, 1),
+            rgba(225, 225, 225, 1));
+    }
+    .sticky {
+      position: sticky;
+      top: 0;
+      height: 5rem;
+      background: linear-gradient(0deg,
+              rgb(255, 210, 171, 0.5),
+              rgb(255, 210, 171, 0.5));
+              z-index: 5;
+  }
+  .main{
+   position: relative;
+  }
+    .navbar .link{
+      font-size: 1.5rem;
+      font-weight: 600;
+    }
+    .header .logo{
+      font-size: 1.8rem;
+    }
+    .menu-hamburguesa{
+      display: flex;
+      width: 70px;
+      height: 70px;
+      margin-right: 1rem;
+    }
+    .cerrar__menu{
+      display: block;
+      color: black;
+      font-size: 1.2rem;
+      text-decoration: none;
+      background-color: rgb(255, 210, 171);
+      padding: 10px 15px;
+  }
    
-.header{
-    background-color: red;
+  .principal{
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  .experiencia{
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+  }
+  .box__card{
+   gap: 5px;
+   margin-top: 10px;
+   margin-left: 250px;
+  }
+  .container-sobremi{
+   position: relative;
+  }
+ .imagen__sobremi{
+   position: absolute;
+   top:20%;
+   left: 5%;
+   height: 368px;
+}
+.card__box{
+   margin-top: 4rem;
+   height: 70%;
+   justify-content: center;
+   align-items: center;
+}
+.skills-container{
+   height: 70vh;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+ 
+}
+.project{
+   height: 60vh;
+}
+.project h1{
 
+   width: 80%;
+}
+
+.contact-container .enlaces{
+   width: 90%;
 }
 
 
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ }
