--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
-*{
+
+
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-   font-family: 'Poppins' , 'monospace';
+    font-family: 'Poppins', 'monospace';
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
-/* !HEADER */
-.header{
+
+.header {
     width: 100%;
     height: 6em;
     background-color: rgb(255, 210, 171);
     display: flex;
     justify-content: space-between;
-    align-items:  center;
+    align-items: center;
     transition-duration: 0.3s;
 }
-.sticky{
+
+.menu-hamburguesa {
+    display: none;
+}
+.cerrar__menu{
+    display: none;
+}
+.sticky {
     position: sticky;
     top: 0;
     height: 4.5rem;
-    background: linear-gradient(0deg , 
-    rgb(255, 210, 171 , 0.5),
-    rgb(255, 210, 171 , 0.5));
+    background: linear-gradient(0deg,
+            rgb(255, 210, 171, 0.5),
+            rgb(255, 210, 171, 0.5));
+            z-index: 5;
 }
-.header .logo{
+
+
+.header .logo {
     margin-left: 2em;
     font-weight: 500;
     font-size: 2em;
@@ -35,32 +49,35 @@ html{
     justify-content: center;
     align-items: center;
 }
-.header .navbar{
+
+.header .navbar {
     width: 50%;
     height: 3em;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     margin-right: 20px;
- 
-} 
-.navbar .link{
+
+}
+
+.navbar .link {
     text-decoration: none;
     color: #000;
     font-size: 1.3em;
     transition: 0.1s;
 }
-.navbar .link:hover{
+
+.navbar .link:hover {
     border-bottom: 1px solid #fff;
     color: rgb(246, 174, 111);
-} 
-/* ! MAIN */
-#main{
+}
+
+#main {
     width: 100%;
     height: auto;
 }
-/* !PRINCIPAL SECTION*/
-.principal{
+
+.principal {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -68,43 +85,51 @@ html{
     align-items: center;
 
 }
+
 /* .box-img{
-   
+    
 } */
-#img-port{
+#img-port {
     height: 380px;
     width: 380px;
     border-radius: 50%;
 }
-.container{
-  width: 400px;
-  height: 300px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  gap: 1.3em;
+
+.container {
+    width: 400px;
+    height: 300px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 1.3em;
 }
-.container .textos{
+
+.container .textos {
     display: flex;
     flex-direction: column;
     gap: 1em;
-    
+
 }
-.textos p{
+
+.textos p {
     color: rgba(110, 110, 110, 0.874);
 }
-.textos h1{
+
+.textos h1 {
     font-weight: 800;
     font-size: 2.6em;
 }
-.textos h2{
+
+.textos h2 {
     font-weight: 800;
     color: rgba(71, 71, 71, 0.814);
 }
-.botones{
-margin: 1em 0;
+
+.botones {
+    margin: 1em 0;
 }
-.botones .btn{
+
+.botones .btn {
     margin: 0 20px;
     border: 1px solid;
     padding: 10px;
@@ -113,39 +138,45 @@ margin: 1em 0;
     transition: 0.5s;
     color: #000;
 }
-.botones .btn:hover{
+
+.botones .btn:hover {
     color: #fff;
     background-color: #000;
 }
-.botones .btn-contact{
+
+.botones .btn-contact {
     background: #000;
     color: #fff;
     padding: 10px;
     text-decoration: none;
     border-radius: 20px;
     transition: .5s linear;
-}.botones .btn-contact:hover{
+}
+
+.botones .btn-contact:hover {
     background: #fff;
     color: #000;
-   border: 1px solid;
+    border: 1px solid;
 }
+
 /* .img-svg{
-
-} */
-.img-svg img{
-  height: 32px;
-  width: 32px;
-  margin: 10px 10px;
+        
+    } */
+.img-svg img {
+    height: 32px;
+    width: 32px;
+    margin: 10px 10px;
 }
 
-/* !SOBRE MI SECTION */
 
-.sobre-mi{
+
+.sobre-mi {
     width: 100%;
     height: 100vh;
-  
+
 }
-.container-sobremi{
+
+.container-sobremi {
     width: 90%;
     height: 100vh;
     margin: 0 auto;
@@ -153,7 +184,8 @@ margin: 1em 0;
     justify-content: center;
     align-items: center;
 }
-.sm-texto{
+
+.sm-texto {
     width: 90%;
     height: 5em;
     margin: 0 auto;
@@ -162,15 +194,18 @@ margin: 1em 0;
     justify-content: center;
     align-items: center;
     gap: 10px;
-} 
-.sm-texto p{
+}
+
+.sm-texto p {
     color: rgba(110, 110, 110, 0.874);
 }
-.sm-texto h1{
+
+.sm-texto h1 {
     font-weight: 800;
     font-size: 2.5em;
 }
-.imagen__sobremi{
+
+.imagen__sobremi {
     height: 400px;
     width: 320px;
     border-radius: 40px;
@@ -178,16 +213,18 @@ margin: 1em 0;
 }
 
 
-.experiencia__container{
+.experiencia__container {
     width: 700px;
     height: 500px;
     display: flex;
     flex-direction: column;
 }
-.experiencia{
+
+.experiencia {
     display: flex;
 }
-.box__card{
+
+.box__card {
     border: 1px solid rgba(128, 128, 128, 0.854);
     width: 230px;
     height: 180px;
@@ -201,50 +238,58 @@ margin: 1em 0;
     justify-content: center;
     align-items: center;
     gap: 20px;
-}.box__card p{
+}
+
+.box__card p {
     color: rgba(71, 71, 71, 0.814);
     font-weight: 400;
 }
-.experiencia__parrafo{
+
+.experiencia__parrafo {
     text-align: center;
     width: 78%;
     height: 100px;
     margin: 50px auto;
 }
-.experiencia__parrafo p{
+
+.experiencia__parrafo p {
     text-align: start;
     color: rgba(71, 71, 71, 0.814);
     font-weight: 400;
     line-height: 27px;
 
 }
+
 /* SECTION HABILIDADES */
-.skills-container{
+.skills-container {
     width: 100%;
     height: 100vh;
 }
 
-.skills-titulo{
+.skills-titulo {
     font-weight: 800;
     font-size: 2.6em;
     text-align: center;
 }
-.card__box{
+
+.card__box {
     width: 100%;
     height: 90%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-items:center;
+    align-items: center;
     cursor: pointer;
     user-select: none;
 }
-.card__container{
+
+.card__container {
     width: 200px;
     height: 250px;
     text-align: center;
 }
-.card__imagen{
+
+.card__imagen {
     margin: 0 auto;
     width: 120px;
     height: 120px;
@@ -252,58 +297,67 @@ margin: 1em 0;
     background-color: rgba(255, 145, 66, 0.826);
     position: relative;
 }
-.card__container:hover img{
-   transition-duration: 0.5s;
+
+.card__container:hover img {
+    transition-duration: 0.5s;
     transform: rotateZ(-360deg);
-} 
-.card__css{
+}
+
+.card__css {
     background-color: rgba(40, 114, 193, 0.853);
 }
-.card__javascript{
+
+.card__javascript {
     background-color: rgb(133, 133, 7);
 }
-.card__react{
+
+.card__react {
     background-color: rgba(3, 40, 79, 0.968);
 }
-.card__imagen img{
+
+.card__imagen img {
     position: relative;
     top: 10%;
     right: 0%;
 }
 
-.card__texto{
-    margin-top: 5px ;
+.card__texto {
+    margin-top: 5px;
 }
-.card__texto p{
+
+.card__texto p {
     text-align: center;
     color: rgba(71, 71, 71, 0.814);
 }
 
 /* FIN SECTION HABILIDADES */
 /* SECTION PROYECTOS */
-.project{
+.project {
     width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.project h1{
+
+.project h1 {
     font-size: 4rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-right: 3px solid;
-    animation:  teclear 3s steps(16), efecto .5s step-end infinite
-    alternate;
+    animation: teclear 3s steps(16), efecto .5s step-end infinite alternate;
 }
-@keyframes teclear{
+
+@keyframes teclear {
     from {
         clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
-    } 
-    to{
-        clip-path: polygon( 0 0, 100% 0, 100% 100%, 0% 100%);
+    }
+
+    to {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
     }
 }
-@keyframes efecto{
+
+@keyframes efecto {
     50% {
         border-color: transparent;
     }
@@ -313,10 +367,11 @@ margin: 1em 0;
 /* FIN SECTION PROYECTOS */
 
 /* INICIO FOOTER */
-.footer{
+.footer {
     width: 100%;
-    height:55vh;
+    height: 55vh;
 }
+
 .contact-container {
     width: 90%;
     height: inherit;
@@ -324,7 +379,9 @@ margin: 1em 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-}.enlaces{
+}
+
+.enlaces {
     width: 60%;
     height: 100px;
     border: 1px solid;
@@ -334,41 +391,50 @@ margin: 1em 0;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-   
-} .contact-titulo{
+
+}
+
+.contact-titulo {
     font-weight: 800;
     font-size: 2.6em;
     text-align: center;
     margin-bottom: 1rem;
-   
+
 }
-.enlaces img{
+
+.enlaces img {
     width: 30px;
     height: 30px;
 }
-.enlaces .email{
+
+.enlaces .email {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 1rem;
-}.enlaces .linkedin{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 1rem;
 }
-.enlaces a{
+
+.enlaces .linkedin {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.enlaces a {
     text-decoration: none;
     color: #000;
     transition: .4s;
-}.enlaces a:hover{
+}
+
+.enlaces a:hover {
     color: red;
     border-bottom: 1px solid bisque;
 }
 
 /* nav footer */
 
-.nav-footer{
+.nav-footer {
     width: 100%;
     height: 6rem;
     margin-top: 2rem;
@@ -376,17 +442,22 @@ margin: 1em 0;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-}.link-footer{
+}
+
+.link-footer {
     color: #000;
     text-decoration: none;
     font-size: 1.3em;
     transition: 0.4s;
-}.link-footer:hover{
+}
+
+.link-footer:hover {
     border-bottom: 1px solid #fff;
-   color: rgb(246, 174, 111);
-}.copyright{
+    color: rgb(246, 174, 111);
+}
+
+.copyright {
     margin-top: 5rem;
 }
-    /* FIN FOOTER */
 
-  
+/* FIN FOOTER */
